--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -31,7 +31,7 @@ jobs:
         run: |
           python -m pip install -U pip setuptools wheel
           pip install -r requirements.txt
-          pip install -r requirements-dev.txt
+          pip install -r requirements_dev.txt
           pip list
 
 
