--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,5 +28,9 @@ dev = {file = ['requirements_dev.txt']}
 [tool.ruff]
 line-length = 120
 
+[project.scripts]
+train = "quick_draw.train:main"
+evaluate = "quick_draw.evaluate:evaluate"
+
 [tool.coverage.run]
 omit = ["tests/*"]
