--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         operating-system: ["ubuntu-latest", "windows-latest", "macos-latest"]
-        python-version: ["3.12", "3.11"]
+        python-version: ["3.11"]
 
     steps:
       - name: Checkout code
@@ -37,5 +37,6 @@ jobs:
 
       - name: Run tests & coverage
         run: |
+          export PYTHONPATH=$PYTHONPATH:$(pwd)/src
           coverage run -m pytest tests/
           coverage report -m
