--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,27 @@
-torch==2.5.1
-typer==0.15.1
-fastapi==0.115.6
-uvicorn==0.34.0
-quickdraw==1.0.0
-wandb==0.19.3
-matplotlib==3.10.0
+# Core Machine Learning and Deep Learning Libraries
 numpy==1.26.3
 scikit-learn==1.6.1
+torch==2.5.1
+torchvision==0.20.1
+timm==1.0.13
+
+# Dataset
+quickdraw==1.0.0
+
+# Experiment Tracking and Logging
+wandb==0.19.3
+
+# API Development
+fastapi==0.115.6
+typer==0.15.1
+uvicorn==0.34.0
+
+# Hugging Face Integration
+huggingface_hub==0.27.1
+safetensors==0.5.2
+
+# Visualization
+matplotlib==3.10.0
+
+# Utilities
+tqdm==4.67.1
