--- a/.github/workflows/codecheck.yaml
+++ b/.github/workflows/codecheck.yaml
@@ -32,6 +32,7 @@ jobs:
         run: |
           python -m pip install -U pip setuptools wheel
           pip install -r requirements.txt
+          pip install -r requirements_dev.txt
           pip list
 
       - name: Code format using Ruff
