Change to new tests

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -14,35 +14,36 @@ jobs:
     strategy:
       matrix:
         #operating-system: ["ubuntu-latest", "windows-latest", "macos-latest"]
-        operating-system: ["windows-latest"]
+        operating-system: ["ubuntu-latest"]
         python-version: ["3.11"]
 
     steps:
+      # 1. Checkout the code
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # 2. Set up Python with cache
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'pip'
-          cache-dependency-path: setup.py
+          cache: pip
 
-      - name: Install dependencies
+      # 3. Install dependencies (split production and dev dependencies)
+      - name: Install production dependencies
         run: |
           python -m pip install -U pip setuptools wheel
           pip install -r requirements.txt
+
+      - name: Install development dependencies
+        run: |
           pip install -r requirements_dev.txt
-          pip list
 
-      - name: Set PYTHONPATH (Unix)
-        if: runner.os != 'Windows'
-        run: echo "PYTHONPATH=\$PYTHONPATH:$(pwd)/src" >> $GITHUB_ENV
+      # 4. Set PYTHONPATH
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=$(pwd)/src" >> $GITHUB_ENV
 
-      - name: Set PYTHONPATH (Windows)
-        if: runner.os == 'Windows'
-        run: echo "PYTHONPATH=\$env:PYTHONPATH;$(pwd)/src" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-
+      # 6. Run tests and coverage
       - name: Run tests & coverage
         run: |
           coverage run -m pytest tests/
