--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ loguru==0.7.3
 fastapi==0.115.6
 typer==0.15.1
 uvicorn==0.34.0
+python-multipart==0.0.20
 
 # Hugging Face Integration
 huggingface_hub==0.27.1
