--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,7 +8,7 @@ steps:
     'europe-west1-docker.pkg.dev/quickdrawproject-448508/quickdraw-artifacts/train-image',
     '--progress=plain',
     '-f',
-    'dockerfiles/train.dockerfile'
+    'dockerfiles/train_gcloud.dockerfile'
   ]
 
 #- name: 'gcr.io/cloud-builders/docker'
