--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ scikit-learn==1.6.1
 torch==2.5.1
 torchvision==0.20.1
 timm==1.0.13
+pytest==8.3.4
 
 # Dataset
 quickdraw==1.0.0
@@ -16,6 +17,7 @@ loguru==0.7.3
 fastapi==0.115.6
 typer==0.15.1
 uvicorn==0.34.0
+locust==2.32.6
 
 # Hugging Face Integration
 huggingface_hub==0.27.1
