--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -15,6 +15,7 @@ jobs:
       matrix:
         #operating-system: ["ubuntu-latest", "windows-latest", "macos-latest"]
         operating-system: ["ubuntu-latest"]
+        #python-version: ["3.11", "3.12"]
         python-version: ["3.11"]
 
     steps:
