--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,11 @@ fastapi==0.115.6
 typer==0.15.1
 uvicorn==0.34.0
 
+# API testing
+pytest==8.3.4
+httpx==0.28.1
+locust==2.32.6
+
 # Hugging Face Integration
 huggingface_hub==0.27.1
 safetensors==0.5.2
