--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,30 +5,18 @@ steps:
     'build',
     '.',
     '-t',
-    'europe-west1-docker.pkg.dev/quickdrawproject-448508/quickdraw-artifacts/train-image',
+    'europe-west1-docker.pkg.dev/quickdrawproject-448508/quickdraw-artifacts/api_image_test',
     '--progress=plain',
     '-f',
-    'dockerfiles/train_gcloud.dockerfile'
-  ]
-
-#- name: 'gcr.io/cloud-builders/docker'
-#  args:
-#    - build
-#    - "-t"
-#    - "europe-west1-docker.pkg.dev/quickdrawproject-448508/quickdraw-artifacts/evaluate"
-#    - "--file=path/to/Dockerfile2"
-#    - "."
-# Add more steps as needed for additional Dockerfiles...
+    'cloud_test/cloud_test.dockerfile'
+  ] 
 
 - name: 'gcr.io/cloud-builders/docker'
   id: 'Push container image'
   args: [
     'push',
-    'europe-west1-docker.pkg.dev/quickdrawproject-448508/quickdraw-artifacts/train-image'
+    'europe-west1-docker.pkg.dev/quickdrawproject-448508/quickdraw-artifacts/api_image_test'
   ]
-  
-#- "europe-west1-docker.pkg.dev/quickdrawproject-448508/quickdraw-artifacts/image2"
-# Add more image names as needed for additional Dockerfiles.
 
 options:
   logging: CLOUD_LOGGING_ONLY
