--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,7 @@ wandb==0.19.3
 loguru==0.7.3
 
 # API Development
-fastapi==0.115.6
 typer==0.15.1
-uvicorn==0.34.0
 
 # API testing
 pytest==8.3.4
@@ -31,3 +29,8 @@ matplotlib==3.10.0
 
 # Utilities
 tqdm==4.67.1
+pandas==2.2.3
+numpy==2.2.2
+
+
+protobuf==5.29.3
