--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ typer==0.15.1
 pytest==8.3.4
 httpx==0.28.1
 locust==2.32.6
+fastapi==0.115.6
 
 # Hugging Face Integration
 huggingface_hub==0.27.1
