--- a/docs/mkdocs.yaml
+++ b/docs/mkdocs.yaml
@@ -16,7 +16,7 @@ plugins:
         python:
           paths: [..]
           options:
-            show_root_heading: true
+            show_root_heading: false
             separate_signature: true
             show_signature_annotations: true
             show_source: true
