--- a/.github/workflows/deploy_docs.yaml
+++ b/.github/workflows/deploy_docs.yaml
@@ -28,5 +28,8 @@ jobs:
     - name: Install dependencies
       run: pip install -r requirements.txt
 
+    - name: Install mkdocs and plugins
+      run: pip install mkdocs mkdocs-material mkdocs-gh-deploy
+
     - name: Deploy docs
       run: mkdocs gh-deploy --force
