--- a/.github/workflows/deploy_docs.yaml
+++ b/.github/workflows/deploy_docs.yaml
@@ -29,4 +29,4 @@ jobs:
       run: pip install -r requirements_dev.txt
 
     - name: Deploy docs
-      run: mkdocs gh-deploy --force
+      run: mkdocs gh-deploy --config-file docs/mkdocs.yaml --force
