--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -13,10 +13,11 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: ["ubuntu-latest", "windows-latest", "macos-latest"]
+        operating-system: ["windows-latest"]
+        #operating-system: ["ubuntu-latest", "windows-latest", "macos-latest"]
         #operating-system: ["ubuntu-latest"]
-        python-version: ["3.11", "3.12"]
-        #python-version: ["3.11"]
+        #python-version: ["3.11", "3.12"]
+        python-version: ["3.11"]
 
     steps:
       # 1. Checkout the code
